--- a/tasks/kubectl.yml
+++ b/tasks/kubectl.yml
@@ -25,3 +25,39 @@
     msg: "{{ kubectl_version.stdout | default('') }}"
   tags: [kubectl]
 
+- name: Install krew (kubectl plugin manager)
+  ansible.builtin.shell: |
+    set -euo pipefail
+    set -x
+    cd "$(mktemp -d)"
+    OS="$(uname | tr '[:upper:]' '[:lower:]')"
+    ARCH="$(uname -m | sed -e 's/x86_64/amd64/' -e 's/\(arm\)\(64\)\?.*/\1\2/' -e 's/aarch64$/arm64/')"
+    KREW="krew-${OS}_${ARCH}"
+    curl -fsSLO "https://github.com/kubernetes-sigs/krew/releases/latest/download/${KREW}.tar.gz"
+    tar zxvf "${KREW}.tar.gz"
+    ./"${KREW}" install krew
+  args:
+    executable: /bin/bash
+    creates: "{{ ansible_env.HOME }}/.krew/bin/kubectl-krew"
+  tags: [kubectl]
+
+- name: Ensure krew is on PATH in .zshrc
+  ansible.builtin.blockinfile:
+    path: "{{ ansible_env.HOME }}/.zshrc"
+    create: true
+    marker: "# {mark} ANSIBLE MANAGED BLOCK: kubectl-krew PATH"
+    block: |
+      # Add kubectl-krew to PATH
+      export PATH="${KREW_ROOT:-$HOME/.krew}/bin:$PATH"
+  tags: [kubectl, shell]
+
+- name: Verify krew installation
+  ansible.builtin.command: kubectl krew version
+  register: krew_version
+  changed_when: false
+  tags: [kubectl]
+
+- name: Output krew version
+  ansible.builtin.debug:
+    msg: "{{ krew_version.stdout | default('') }}"
+  tags: [kubectl]
