/Users/luke/.krew/bin:/opt/homebrew/bin:/opt/homebrew/sbin:/usr/local/bin:/System/Cryptexes/App/usr/bin:/usr/bin:/bin:/usr/sbin:/sbin:/var/run/com.apple.security.cryptexd/codex.system/bootstrap/usr/local/bin:/var/run/com.apple.security.cryptexd/codex.system/bootstrap/usr/bin:/var/run/com.apple.security.cryptexd/codex.system/bootstrap/usr/appleinternal/bin:/usr/local/share/dotnet:~/.dotnet/tools:/Users/luke/.local/bin:/Users/luke/.local/bin:/Users/luke/.local/bin

--- a/tasks/env_simple.yml
+++ b/tasks/env_simple.yml
@@ -12,3 +12,19 @@
       export {{ k }}="{{ v }}"
       {% endfor %}
   tags: [env]
+
+- name: Ensure .zshrc contains exported env vars (and PATH updates)
+  ansible.builtin.blockinfile:
+    path: "{{ ansible_env.HOME }}/.zshrc"
+    create: true
+    marker: "# {mark} ANSIBLE MANAGED BLOCK: Exported env vars"
+    block: |
+      # Managed by Ansible: exported env vars
+      {% for k, v in env_vars.items() %}
+      export {{ k }}="{{ v }}"
+      {% endfor %}
+      # If KREW_PATH is set, ensure it's on PATH
+      if [ -n "${KREW_PATH:-}" ]; then
+        export PATH="$KREW_PATH:$PATH"
+      fi
+  tags: [env, shell]
