--- a/wsl-setup.yml
+++ b/wsl-setup.yml
@@ -60,6 +60,26 @@
       - yamllint
       - zsh
 
+    shell_aliases:
+      ap: "ansible-playbook"
+      cat-all: 'for file in *; do echo -e "\n=== $file ===\n"; cat "$file"; done'
+      cls: "clear"
+      commit: "git add . && git commit --no-verify -m"
+      fabric-update: "cp -a ~/.config/custom-fabric-patterns/* ~/.config/fabric/patterns/"
+      gd: "git --no-pager diff"
+      git-delete-branches: 'git branch | grep -v "main" | xargs git branch -D'
+      gl: "git log"
+      gp: "git push"
+      gpl: "git pull"
+      gst: "git status"
+      k: "kubectl"
+      ll: "ls -al"
+      passgen: "tr -dc 'A-Za-z0-9' </dev/urandom | head -c 16 ; echo"
+      pbcopy: "tee <&0 | clip.exe"
+      pbpaste: "powershell.exe Get-Clipboard | sed 's/\r$//' | sed -z '$ s/\n$//'"
+      pc: 'pre-commit run --all-files'
+      tfmt: "terraform fmt -recursive"
+
   tasks:
     - name: Ensure base directories exist in HOME
       ansible.builtin.file:
@@ -112,23 +132,9 @@
         create: true
         marker: "# {mark} ANSIBLE MANAGED BLOCK: Custom Aliases"
         block: |
-          alias ap="ansible-playbook"
-          alias gst="git status"
-          alias gd="git --no-pager diff"
-          alias gp="git push"
-          alias gpl="git pull"
-          alias gl="git log"
-          alias commit="git add . && git commit --no-verify -m"
-          alias ll="ls -al"
-          alias cls="clear"
-          alias fabric-update="cp -a ~/.config/custom-fabric-patterns/* ~/.config/fabric/patterns/"
-          alias tfmt="terraform fmt -recursive"
-          alias pbpaste="powershell.exe Get-Clipboard | sed 's/\r$//' | sed -z '$ s/\n$//'"
-          alias pbcopy="tee <&0 | clip.exe"
-          alias passgen="tr -dc 'A-Za-z0-9' </dev/urandom | head -c 16 ; echo"
-          alias git-delete-branches='git branch | grep -v "main" | xargs git branch -D'
-          alias cat-all='for file in *; do echo -e "\n=== $file ===\n"; cat "$file"; done'
-          alias pc='pre-commit run --all-files'
+          {% for alias_name, alias_command in shell_aliases.items() %}
+          alias {{ alias_name }}="{{ alias_command }}"
+          {% endfor %}
       tags: [aliases, shell]
 
     - name: Terraform
