--- a/wsl-setup.yml
+++ b/wsl-setup.yml
@@ -6,6 +6,10 @@
   vars_files:
     - vars.yml
 
+  variables:
+  run_bootstrap_scripts: false
+  ansible_python_interpreter: /usr/bin/python3
+
   tasks:
     - name: Ensure base directories exist in HOME
       ansible.builtin.file:
