--- a/tasks/terraform.yml
+++ b/tasks/terraform.yml
@@ -3,50 +3,50 @@
 # -------------------------
 - name: Determine terraform arch
   ansible.builtin.set_fact:
-    terraform_arch: "{{ terraform_arch_map.get(ansible_architecture, 'amd64') }}"
+    terraform_arch: "{% if ansible_architecture == 'x86_64' %}amd64{% elif ansible_architecture == 'aarch64' or ansible_architecture == 'arm64' %}arm64{% elif ansible_architecture == 'armv7l' %}arm{% else %}amd64{% endif %}"
   tags: [terraform]
 
 - name: Create temp dir for terraform
   ansible.builtin.file:
-    path: "{{ terraform_tmp_dir }}"
+    path: "/tmp/terraform-{{ terraform_version }}"
     state: directory
     mode: '0755'
   tags: [terraform]
 
 - name: Download Terraform zip
   ansible.builtin.get_url:
-    url: "https://releases.hashicorp.com/terraform/{{ terraform_version }}/terraform_{{ terraform_version }}_{{ terraform_os }}_{{ terraform_arch }}.zip"
-    dest: "{{ terraform_tmp_dir }}/terraform_{{ terraform_version }}_{{ terraform_os }}_{{ terraform_arch }}.zip"
+    url: "https://releases.hashicorp.com/terraform/{{ terraform_version }}/terraform_{{ terraform_version }}_linux_{{ terraform_arch }}.zip"
+    dest: "/tmp/terraform-{{ terraform_version }}/terraform_{{ terraform_version }}_linux_{{ terraform_arch }}.zip"
     mode: '0644'
   tags: [terraform]
 
 - name: Download Terraform SHA256SUMS
   ansible.builtin.get_url:
     url: "https://releases.hashicorp.com/terraform/{{ terraform_version }}/terraform_{{ terraform_version }}_SHA256SUMS"
-    dest: "{{ terraform_tmp_dir }}/SHA256SUMS"
+    dest: "/tmp/terraform-{{ terraform_version }}/SHA256SUMS"
     mode: '0644'
   tags: [terraform]
 
 - name: Verify Terraform checksum
   ansible.builtin.shell: |
     set -euo pipefail
-    cd "{{ terraform_tmp_dir }}"
-    grep "terraform_{{ terraform_version }}_{{ terraform_os }}_{{ terraform_arch }}.zip" SHA256SUMS | sha256sum -c -
+    cd "/tmp/terraform-{{ terraform_version }}"
+    grep "terraform_{{ terraform_version }}_linux_{{ terraform_arch }}.zip" SHA256SUMS | sha256sum -c -
   args:
     executable: /bin/bash
   tags: [terraform]
 
 - name: Unzip Terraform
   ansible.builtin.unarchive:
-    src: "{{ terraform_tmp_dir }}/terraform_{{ terraform_version }}_{{ terraform_os }}_{{ terraform_arch }}.zip"
-    dest: "{{ terraform_tmp_dir }}"
+    src: "/tmp/terraform-{{ terraform_version }}/terraform_{{ terraform_version }}_linux_{{ terraform_arch }}.zip"
+    dest: "/tmp/terraform-{{ terraform_version }}"
     remote_src: true
   tags: [terraform]
 
 - name: Install Terraform to /usr/local/bin
   become: true
   ansible.builtin.copy:
-    src: "{{ terraform_tmp_dir }}/terraform"
+    src: "/tmp/terraform-{{ terraform_version }}/terraform"
     dest: /usr/local/bin/terraform
     owner: root
     group: root
@@ -55,7 +55,7 @@
 
 - name: Clean up Terraform temp
   ansible.builtin.file:
-    path: "{{ terraform_tmp_dir }}"
+    path: "/tmp/terraform-{{ terraform_version }}"
     state: absent
   tags: [terraform]
 
