Wait for apt locks

--- a/vars.yml
+++ b/vars.yml
@@ -31,6 +31,7 @@ apt_packages:
   - golang-go
   - gpg
   - httpie # https://httpie.io/cli
+  - ipcalc
   - jq
   - ncdu # https://github.com/rofl0r/ncdu
   - podman
