--- a/vars.yml
+++ b/vars.yml
@@ -4,7 +4,7 @@ env_vars:
   SKIP: "terraform_checkov,end-of-file-fixer"
   PATH: "$HOME/bin:/usr/local/bin:$HOME/.local/bin:$PATH"
 
-terraform_version: "1.13.3"
+terraform_version: "1.14.0"
 
 # home directory structure
 directories:
@@ -52,6 +52,7 @@ apt_packages:
 # pipx packages to install
 pipx_packages:
   - jmespath
+  - semgrep
 
 # vscode extensions to install
 vscode_extensions:
